--- a/source/sass/partials/_header.scss
+++ b/source/sass/partials/_header.scss
@@ -1,6 +1,10 @@
+.header {
+    padding-top: 50px;
+}
+
 h1 {
-    color: red;
     font-size: 24px;
+    font-weight: 400;
     text-align: center;
 
 }
