--- a/source/sass/partials/_mainCnt.scss
+++ b/source/sass/partials/_mainCnt.scss
@@ -60,26 +60,42 @@ Main Content
 
 .mainCnt_item {
     margin-bottom: 30px;
+}
+
+.mainCnt_item--imgWrap {
+    margin-bottom: 15px;
     padding: 15px;
     background-color: #fff;
     box-shadow: 0 2px 10px rgba(#000, .08);
     border-radius: 5px;
-    height: 440px;
+    height: 330px;
 
-    h3 {
-        padding-top: 25px;
-        text-align: center;
+    img {
+        margin: 30px auto 0;
+        width: 50%;
     }
 }
 
-.mainCnt_item--imgWrap {
-    margin: 0 auto;
-    width: 75%;
+.mainCnt_item--description {
+    span {
+        margin-left: 5px;
+        font-weight: 600;
+    }
+
+    span.card_itemPrice {
+        float: right;
+        margin-right: 5px;
+    }
+    &:after {
+        content: '';
+        clear: both;
+        display: table;
+    }
 }
 
 .add-to-cart {
     display: block;
-    margin: 0 auto;
+    margin: 35px auto 0;
     padding: 0 15px;
     color: #ffffff;
     background-color: #46b29d;
