--- a/source/sass/partials/_mainCnt.scss
+++ b/source/sass/partials/_mainCnt.scss
@@ -26,25 +26,23 @@ Cart button
         background-color: #46b29d;
         color: #fff;
         font-size: 12px;
+        font-weight: 600;
         text-align: center;
         vertical-align: middle;
         border-radius: 50%;
 
         /* scale it down if no products have been added to the cart */
-        //@include transform(scale(0));
-        //@include transition(transform .2s 0s);
+        transform: scale(0);
+        transition: transform .2s 0s;
     }
 
     &.items-added span {
         /* counter visible when a product is added to the cart */
-        //@include transform(scale(1));
+        transform: scale(1);
     }
 
-    //@include MQ(L) {
-    //    position: fixed;
-    //    top: 30px;
-    //    right: 30px;
-    //}
+
+
 }
 
 
@@ -94,6 +92,7 @@ Main Content
 }
 
 .add-to-cart {
+    position: relative;
     display: block;
     margin: 35px auto 0;
     padding: 0 15px;
@@ -102,12 +101,52 @@ Main Content
     font-size: 12px;
     font-weight: 400;
     text-transform: uppercase;
+    height: 34px;
+    width: calc(50% - 23px);
     line-height: 34px;
     cursor: pointer;
     border-radius: 4px;
 
     em {
-        text-align: center;
+        ///* this is the button text message */
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        font-size: 16px;
+        font-weight: 600;
         font-style: normal;
+        /* Force Hardware Acceleration */
+        transform: translateZ(0);
+        backface-visibility: hidden;
+        transition: transform 0.3s;
+    }
+
+    svg {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        width: 100%;
+        /* move the icon on the right - outside the button */
+        transform: translateX(50%) translateY(-50%);
+        transition: transform 0.3s;
+    }
+
+    &:focus {
+        outline: none;
+    }
+
+    &.is-added em {
+        /* product added to the cart - hide text message on the left with no transition*/
+        color: transparent;
+        transform: translateX(-100%);
+        transition: transform 0s;
+    }
+
+    &.is-added svg {
+        /* product added to the cart - move the svg back inside the button */
+        transform: translateX(-50%) translateY(-50%);
+        transition: transform 0s;
     }
 }
