--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1149,12 +1149,16 @@ Cart button
     background-color: #46b29d;
     color: #fff;
     font-size: 12px;
+    font-weight: 600;
     text-align: center;
     vertical-align: middle;
     border-radius: 50%;
-    /* scale it down if no products have been added to the cart */ }
+    /* scale it down if no products have been added to the cart */
+    transform: scale(0);
+    transition: transform .2s 0s; }
   .cd-cart.items-added span {
-    /* counter visible when a product is added to the cart */ }
+    /* counter visible when a product is added to the cart */
+    transform: scale(1); }
 
 /* --------------------------------
 
@@ -1192,6 +1196,7 @@ Main Content
   display: table; }
 
 .add-to-cart {
+  position: relative;
   display: block;
   margin: 35px auto 0;
   padding: 0 15px;
@@ -1200,9 +1205,40 @@ Main Content
   font-size: 12px;
   font-weight: 400;
   text-transform: uppercase;
+  height: 34px;
+  width: calc(50% - 23px);
   line-height: 34px;
   cursor: pointer;
   border-radius: 4px; }
   .add-to-cart em {
-    text-align: center;
-    font-style: normal; }
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    font-size: 16px;
+    font-weight: 600;
+    font-style: normal;
+    /* Force Hardware Acceleration */
+    transform: translateZ(0);
+    backface-visibility: hidden;
+    transition: transform 0.3s; }
+  .add-to-cart svg {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 100%;
+    /* move the icon on the right - outside the button */
+    transform: translateX(50%) translateY(-50%);
+    transition: transform 0.3s; }
+  .add-to-cart:focus {
+    outline: none; }
+  .add-to-cart.is-added em {
+    /* product added to the cart - hide text message on the left with no transition*/
+    color: transparent;
+    transform: translateX(-100%);
+    transition: transform 0s; }
+  .add-to-cart.is-added svg {
+    /* product added to the cart - move the svg back inside the button */
+    transform: translateX(-50%) translateY(-50%);
+    transition: transform 0s; }
